# pyrust-task-id

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  linters.yaml  tests.yaml
src/: lib.rs  main.rs
